internal/xds/translator/testdata/out/xds-ir/jwt-multi-route-multi-provider.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route-www.test.com
      route:
        cluster: first-route-www.test.com-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: jwt/requirement/1bc45aab169ed46ae459f4389afcf01ef34c24a680f322bd4bf53b6673e90743
    - match:
        path: foo/baz
      name: second-route-www.test.com
      route:
        cluster: second-route-www.test.com-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: jwt/requirement/f10504aaed29f87cda860a91e55082670a7be8abd48f08a4710e1d5725d2d164
